# assistive-writing-pad

./: .gitignore  README.md  pyproject.toml
data/examples/: demo_sentence.txt
docs/: ROADMAP.md  SKILL_LOG.md
models/: README.md
scripts/: setup_model_env.sh
src/assistive_writing_pad/: __init__.py  __main__.py  contracts.py  pipeline.py
src/assistive_writing_pad/capture/: __init__.py  huion_probe.py  huion_reader.py  simulator.py  stroke_io.py
src/assistive_writing_pad/config/: settings.py
src/assistive_writing_pad/correction/: __init__.py  rule_based.py
src/assistive_writing_pad/display/: __init__.py  handwriting_app.py  web_app.py
src/assistive_writing_pad/preprocessing/: __init__.py  image_ops.py  pipeline.py  rasterize.py
src/assistive_writing_pad/recognition/: __init__.py  demo.py  template.py  trocr.py
tests/: test_capture.py  test_line_segmentation.py  test_pipeline.py  test_preprocessing.py  test_settings.py  test_template_recognizer.py  test_trocr_rendering.py  test_web_app.py
