[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistive-writing-pad"
version = "0.1.0"
description = "Real-time assistive handwriting recognition and correction system for dysgraphia support."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "Pillow>=10.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "rapidfuzz>=3.0",
  "jiwer>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
models = [
  "onnxruntime>=1.17",
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.40",
]
hardware = [
  "evdev>=1.7; platform_system == 'Linux'",
]

[project.scripts]
assistive-writing-pad = "assistive_writing_pad.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
